--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Prime Resume Project</title>
-  <link rel="stylesheet" type="text/css" href="ResumeCSS.css"/>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
